--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -7,14 +7,18 @@
     flex-wrap: nowrap;
     white-space: nowrap;
     min-width: max-content;
+    aspect-ratio: 2.6/1;
     
     border-radius: 100px;
     border: none;
-    padding: clamp(0.3rem, .9vw, .5rem) clamp(0.8rem, 2.2vw, 1.2rem);
+    // padding: clamp(0.3rem, .9vw, .5rem) clamp(0.8rem, 2.2vw, 1.2rem);
+    // padding: min(1%, .5rem) min(3%, .8rem);
+    padding: 0 min(3%, .8rem);
+
     gap: clamp(0.3rem, 1vw, 0.6rem);
 
     font-family: 'Roboto Condensed';
-    font-size: clamp(.5rem, 2.1vw, 1rem);
+    font-size: clamp(.4rem, 2.1vw, 1rem);
     font-weight: 700;
 
     cursor: pointer;
