--- a/src/styles/globals/_typography.scss
+++ b/src/styles/globals/_typography.scss
@@ -12,8 +12,6 @@
   font-family: 'Montserrat';
   font-weight: 700;
   font-style: normal;
-  // font-size: 48px;
-  // font-size: clamp(80%, 2vw, 100%);
   font-size: clamp(0.6rem, 13cqi, 1.5rem);
   line-height: 1.2;
 }
@@ -23,8 +21,9 @@
   font-weight: 400;
   font-style: normal;
   // font-size: 18px;
-  font-size: clamp(.7rem, 2.5vw, 1.4rem);
-  line-height: 1.4;
+  font-size: clamp(.5rem, 2.5vw, 1.4rem);
+  // line-height: 1.4;
+  line-height: clamp(.5rem, 2.6vw, 1.4rem);
 }
 
 .big-title {
@@ -32,8 +31,9 @@
   font-weight: 800;
   font-style: normal;
   // font-size: 48px;
-  font-size: clamp(1.5rem, 5vw, 3rem);
-  line-height: 1.2;
+  font-size: clamp(1.2rem, 5vw, 3rem);
+  // line-height: 1.2;
+  line-height: clamp(1.2rem, 5vw, 2.5rem);
 }
 
 .header_link {
